...
                        focusedBorderColor = BlueLight,
                        unfocusedBorderColor = Color(0, 0, 0, 50)
                    ),
                    modifier = Modifier
                        .width(325.dp)
                        .padding(0.dp, 10.dp, 0.dp, 10.dp)
                        .testTag("EmailInputField"),
                    textStyle = TextStyle(
                        color = Color.Black
                    ),
                    isError = !signInUiState.value.isEmailValid,
                    supportingText = {
                        if (!signInUiState.value.isEmailValid)
...
                        focusedBorderColor = BlueLight,
                        unfocusedBorderColor = Color(0, 0, 0, 50)
                    ),
                    modifier = Modifier
                        .width(325.dp)
                        .padding(0.dp, 10.dp, 0.dp, 10.dp)
                        .testTag("PasswordInputField"),
                    visualTransformation = if (showPassword) {
                        VisualTransformation.None
                    } else {
                        PasswordVisualTransformation()
                    },
                    isError = !signInUiState.value.isPasswordValid,
...
                    },
                    trailingIcon = {
                        if (showPassword) {
                            IconButton(onClick = { showPassword = false }) {
                                Icon(
                                    imageVector = Icons.Filled.Visibility,
                                    contentDescription = "Toggle password visibility"
                                )
                            }
                        } else {
                            IconButton(
                                onClick = { showPassword = true }) {
                                Icon(
...
                    colors = ButtonDefaults.outlinedButtonColors(
                        containerColor = BlueDark
                    ),
                    modifier = Modifier
                        .width(325.dp)
                        .padding(0.dp, 20.dp, 0.dp, 0.dp)
                        .testTag("SignInButton"),
                    shape = RoundedCornerShape(50)
                ) {
                    Text(
                        "Accedi",
                        color = Color.White,
                        modifier = Modifier.padding(8.dp),
...
                }

                Spacer(modifier = Modifier.size(20.dp))

                TextButton(
                    onClick = { onGoSignUp() },
                    modifier = Modifier.testTag("GoSignUpButton")
                ) {
                    Text(
                        text = "Non hai un account? Registrati ora!",
                        fontSize = 14.sp
                    )
                }
...
                                    signInIntentSender ?: return@launch
                                ).build()
                            )
                        }},
                    modifier = Modifier
                        .width(325.dp)
                        .testTag("GoogleSignInButton"),
                ) {
                    Image(
                        painterResource(id = R.drawable.google_logo),
                        contentDescription = "Cart button icon",
                        modifier = Modifier.size(30.dp)
                    )
...
